drag the seekbar on mobile fix
prevent the default behaviour when dragging so the window won't scroll left or right when dragging the seekbar
enlarging the touch area of the seekbar, for easier scrolling

--- a/src/components/seekbar/_seekbar.scss
+++ b/src/components/seekbar/_seekbar.scss
@@ -1,7 +1,8 @@
 @import '~styles/variables';
 
 .player .seek-bar {
-  padding: 6px 0;
+  padding: 12px 0;
+  margin: -6px 0;
   cursor: pointer;
   position: relative;
 
